[gd_scene format=3 uid="uid://dscfrnsvp82w"]

[ext_resource type="Script" uid="uid://gg74v81xi7sp" path="res://Character/Player/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://lfobox48lvbe" path="res://Assets/SeaCharacter.png" id="1_v0iea"]
[ext_resource type="Script" uid="uid://ci3rbsupfrilr" path="res://Bomb/bomb_placement_system.gd" id="4_vgqql"]
[ext_resource type="PackedScene" uid="uid://cvon06jsd7m25" path="res://Character/Player/heart_container.tscn" id="5_1spju"]
[ext_resource type="Script" uid="uid://bbmakuws150p6" path="res://PowerUp/power_up_system.gd" id="5_fkybt"]
[ext_resource type="PackedScene" uid="uid://boabroq8g6da8" path="res://Character/Player/powerup_display.tscn" id="6_powerup"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnsp"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 0, 61, 92)

[sub_resource type="SpriteFrames" id="SpriteFrames_6t5aa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnsp")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgqql"]
size = Vector2(64, 64)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_sync"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("AnimatedSprite2D:flip_h")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("NameLabel:text")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("NameLabel:modulate")
properties/3/spawn = true
properties/3/replication_mode = 2

[node name="Player" type="Area2D" unique_id=1910785464 groups=["players"]]
collision_mask = 64
script = ExtResource("1_cvnsp")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=2030641859]
scale = Vector2(3, 3)
transform = Transform2D(3, 0, 0, 3, 0, 0)

[node name="heartContainer" parent="CanvasLayer" unique_id=363770908 instance=ExtResource("5_1spju")]

[node name="PowerupDisplay" parent="CanvasLayer" unique_id=123456789 instance=ExtResource("6_powerup")]
offset_left = 1.6666669
offset_top = 200.33334
offset_right = 194.66667
offset_bottom = 234.33334
scale = Vector2(0.4, 0.4)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=879305106]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_6t5aa")
animation = &"Idle"
frame_progress = 0.27862462

[node name="NameLabel" type="Label" parent="."]
offset_left = -40.0
offset_top = -50.0
offset_right = 40.0
offset_bottom = -30.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RayCast2D" type="RayCast2D" parent="." unique_id=1099746239]
target_position = Vector2(0, 64)
collision_mask = 15
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=2030858794]
shape = SubResource("RectangleShape2D_vgqql")

[node name="BombPlacementSystem" type="Node" parent="." unique_id=2094566176]
script = ExtResource("4_vgqql")

[node name="PowerUpSystem" type="Node" parent="." unique_id=991528941]
script = ExtResource("5_fkybt")

[node name="SpeedUpTimer" type="Timer" parent="PowerUpSystem" unique_id=620760253 groups=["raycasts"]]
wait_time = 10.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="." unique_id=684116910]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_sync")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="powerups_changed" from="PowerUpSystem" to="CanvasLayer/PowerupDisplay" method="update_display"]
[connection signal="timeout" from="PowerUpSystem/SpeedUpTimer" to="PowerUpSystem" method="_on_speed_up_timer_timeout"]
